# factura

./: .gitignore  Cargo.toml  readme.md
src/: invoice.rs  lib.rs  reader.rs  simple_invoice.rs  types.rs
templates/: simple_invoice.html
tests/: simple_invoice.rs
