[package]
name = "factura"
version = "0.1.0"
edition = "2024"
description = "A library to serialize raw json/toml data and convert it into PDF or HTML service payment invoices"
licence = "MIT"

[dependencies]
genpdf = { version = "0.2.0", optional = true }
askama = { version = "0.14.0", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true}
serde_json = { version = "1.0.140", optional = true }
toml = { version = "0.9.2", optional = true }

[features]
default = ["pdf", "html", "from_file"]
pdf = ["genpdf"]
html = ["askama"]
from_file = ["serde", "serde_json", "toml"]
