[package]
name = "factura"
version = "0.1.0"
edition = "2024"
description = "Generate PDF or HTML invoices, without any external application dependencies"
licence = "MIT"

[alias]
d = "doc"
b = "build"
br = "build --release"

[dependencies]
genpdf = { version = "0.2.0", optional = true }
askama = { version = "0.14.0", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true}
serde_json = { version = "1.0.140", optional = true }
toml = { version = "0.9.2", optional = true }
rust-embed = "8.7.2"

[features]
default = ["pdf", "html", "from_file"]
pdf = ["genpdf"]
html = ["askama"]
from_file = ["serde", "serde_json", "toml"]
